<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.DetailsFragment">

    <LinearLayout
        android:id="@+id/detail_menu_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/detail_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/menu_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:backgroundTint="@color/purple_700" />

    <TextView
        android:id="@+id/detail_bar"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/product"
        android:nextFocusForward="@id/menu_search"
        android:singleLine="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/detail_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/detail_menu_container"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/condition_new" />

    <TextView
        android:id="@+id/detail_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/sold_products"
        app:layout_constraintTop_toBottomOf="@id/detail_menu_container"
        app:layout_constraintStart_toEndOf="@id/detail_condition"/>

    <TextView
        android:id="@+id/detail_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_condition"
        android:text="@string/product" />

    <ImageView
        android:id="@+id/image_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_apple_case"
        app:layout_constraintTop_toBottomOf="@id/detail_tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="6dp" />

    <LinearLayout
        android:id="@+id/description_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/image_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_detail_round">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/brand"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/description_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/uninformed"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/description_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_detail_round">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/model"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/color_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/uninformed"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/detail_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/color_container"
        android:text="@string/price_amount" />

    <TextView
        android:id="@+id/installments_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginStart="12dp"
        android:maxLines="1"
        android:visibility="visible"
        android:text="@string/show_installments"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_price" />

    <TextView
        android:id="@+id/shipment_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="12dp"
        android:maxLines="1"
        android:visibility="gone"
        android:text="@string/free_shipping_tomorrow"
        android:textSize="13sp"
        android:textColor="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/installments_detail" />

    <TextView
        android:id="@+id/stock_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="12dp"
        android:maxLines="1"
        android:text="@string/stock_available"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shipment_detail" />

    <LinearLayout
        android:id="@+id/stock_container"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="6dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/stock_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_detail_round">

        <TextView
            android:id="@+id/stock_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/stock_txt"
            android:layout_marginTop="4dp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/attributes_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/another_att"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/stock_container"/>

    <TextView
        android:id="@+id/attributes_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/product"
        android:layout_marginTop="14dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/attributes_tittle"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>