<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:elevation="4dp"
    android:id="@+id/item_cardview"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:layout_constraintBottom_toTopOf="@+id/item_tittle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <TextView
            android:id="@+id/item_tittle"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:maxLines="3"
            android:text="@string/item_tittle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/item_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_image" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/price_amount"
            android:gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/item_discount"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_tittle"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/item_discount"
            android:layout_width="74dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/new_condition"
            android:gravity="center_vertical"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/item_price"
            app:layout_constraintTop_toBottomOf="@+id/item_tittle" />

        <TextView
            android:id="@+id/installments_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:textSize="13sp"
            android:text="@string/show_installments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_price" />

        <TextView
            android:id="@+id/item_delivery"
            android:layout_width="60dp"
            android:layout_height="18dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:background="@drawable/bg_shipment_round"
            android:text="@string/free_shipping"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/installments_item" />

        <TextView
            android:id="@+id/item_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="6dp"
            android:paddingBottom="6dp"
            android:maxLines="1"
            android:visibility="visible"
            android:text="@string/accept_mercadopago"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_delivery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>